--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: objective-c
 env:
   matrix:
   - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=51
+  - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=51
 # - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=52
 # - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=JIT
-  - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=51
+# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=51
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=52
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=JIT
-  - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=51
+# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=51
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=52
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=JIT
 
@@ -24,12 +25,13 @@ install:
 - if [[ $LUA == 51 ]];  then brew install lua; fi
 - if [[ $LUA == JIT ]]; then brew install luajit; fi
 - brew install cmake ninja
+- ${CMAKE_CXX_COMPILER} --version
 
 before_script:
 - mkdir build
 - cd build
 - export CPLUS_INCLUDE_PATH=/usr/local/include/c++/4.9.0:/usr/local/include/c++/4.9.0/x86_64-apple-darwin13.1.0
-- export LIBRARY_PATH=/usr/local/lib:/usr/local/lib/gcc/x86_64-apple-darwin13.1.0/4.9.0
+- export LIBRARY_PATH=/usr/local/lib
 - cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DTCMALLOC=${TCMALLOC} -DMULTI_THREAD=${MULTI_THREAD} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ../src -G Ninja
 - cd ..
 
