--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,15 @@ language: objective-c
 env:
   matrix:
   - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=51
-  - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=51
 # - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=52
 # - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=JIT
-# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=51
+  - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=51
+# - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=52
+# - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=JIT
+ - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=51
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=52
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=JIT
-# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=51
+ - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=51
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=52
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=JIT
 
@@ -17,6 +19,13 @@ install:
       wget https://dl.dropboxusercontent.com/u/203889738/gcc/gcc-4.9-OSX.tar.gz;
       sudo tar xfz gcc-4.9-OSX.tar.gz -C /;
       sudo chown -R `whoami` /usr/local;
+      export CPLUS_INCLUDE_PATH=/usr/local/include/c++/4.9.0:/usr/local/include/c++/4.9.0/x86_64-apple-darwin13.1.0;
+      export LIBRARY_PATH=/usr/local/lib;
+  else if [[ $CMAKE_CXX_COMPILER == clang++ ]]; then
+      wget https://dl.dropboxusercontent.com/u/203889738/gcc/clang+llvm-3.4.1-x86_64-apple-darwin10.9.tar.xz;
+      sudo tar xfz gcc-4.9-OSX.tar.gz -C /;
+      sudo chown -R `whoami` /usr/bin;
+      export LIBRARY_PATH=/usr/lib:/usr/local/lib;
   fi
 - brew update
 - brew install gmp; brew unlink gmp; brew link --overwrite gmp
@@ -30,8 +39,6 @@ install:
 before_script:
 - mkdir build
 - cd build
-- export CPLUS_INCLUDE_PATH=/usr/local/include/c++/4.9.0:/usr/local/include/c++/4.9.0/x86_64-apple-darwin13.1.0
-- export LIBRARY_PATH=/usr/local/lib
 - cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DTCMALLOC=${TCMALLOC} -DMULTI_THREAD=${MULTI_THREAD} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ../src -G Ninja
 - cd ..
 
