--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: objective-c
 env:
   matrix:
-  - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=51
-# - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=52
-# - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=JIT
-  - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=51
-# - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=52
-# - CMAKE_CXX_COMPILER=g++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=JIT
-  - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=51
-# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=52
-# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF PUSH_TO_CDASH=TRUE LUA=JIT
-  - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=51
-# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=52
-# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON PUSH_TO_CDASH=TRUE LUA=JIT
+  - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=51
+# - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=52
+# - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=JIT
+  - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=51
+# - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=52
+# - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=JIT
+  - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=51
+# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=52
+# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=JIT
+  - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=51
+# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=52
+# - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=JIT
 
 install:
 - if [[ ${CMAKE_CXX_COMPILER} == g++ ]]; then
@@ -28,6 +28,7 @@ install:
       sudo chown -R `whoami` /usr/bin;
       export LIBRARY_PATH=/usr/lib:/usr/local/lib;
   fi
+- ${CMAKE_CXX_COMPILER} --version
 - brew update
 - brew install gmp; brew unlink gmp; brew link --overwrite gmp
 - brew install mpfr; brew unlink mpfr; brew link --overwrite mpfr
@@ -35,7 +36,6 @@ install:
 - if [[ $LUA == 51 ]];  then brew install lua; fi
 - if [[ $LUA == JIT ]]; then brew install luajit; fi
 - brew install cmake ninja
-#- ${CMAKE_CXX_COMPILER} --version
 
 before_script:
 - mkdir build
@@ -48,4 +48,4 @@ script:
 - ctest -D ExperimentalConfigure
 - ctest -D ExperimentalBuild -VV
 - otool -L ./shell/lean
-- ctest -D ExperimentalTest --output-on-failure
+- ctest -D ExperimentalTest -LE expensive --output-on-failure
