--- a/.travis.yml
+++ b/.travis.yml
@@ -18,18 +18,9 @@ install:
 - brew update
 - if [[ ${CMAKE_CXX_COMPILER} == g++ ]]; then
       brew install gcc;
-      # wget https://dl.dropboxusercontent.com/u/203889738/gcc/gcc-4.9-OSX.tar.gz;
-      # sudo tar xfz gcc-4.9-OSX.tar.gz -C /;
-      # sudo chown -R `whoami` /usr/local;
-      # export CPLUS_INCLUDE_PATH=/usr/local/include/c++/4.9.0:/usr/local/include/c++/4.9.0/x86_64-apple-darwin13.1.0;
-      # export LIBRARY_PATH=/usr/local/lib;
   fi
 - if [[ ${CMAKE_CXX_COMPILER} == clang++ ]]; then
-      brew llvm;
-      # wget https://dl.dropboxusercontent.com/u/203889738/gcc/clang+llvm-3.4.1-x86_64-apple-darwin10.9.tar.xz;
-      # sudo tar xfz clang+llvm-3.4.1-x86_64-apple-darwin10.9.tar.xz -C /;
-      # sudo chown -R `whoami` /usr/bin;
-      # export LIBRARY_PATH=/usr/lib:/usr/local/lib;
+      brew install llvm;
   fi
 - ${CMAKE_CXX_COMPILER} --version
 - brew update
