--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,21 @@ env:
   - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=51
 # - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=52
 # - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=JIT
-  - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=51
+#  - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=51
 # - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=52
 # - CMAKE_CXX_COMPILER=g++     CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=JIT
   - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=51
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=52
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=OFF LUA=JIT
-  - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=51
+#  - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=51
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=52
 # - CMAKE_CXX_COMPILER=clang++ CMAKE_BUILD_TYPE=DEBUG TCMALLOC=OFF MULTI_THREAD=ON LUA=JIT
 
 install:
 - brew update
+- echo $PATH
 - export PATH=/usr/local/bin:$PATH
+- echo $PATH
 - brew install gmp
 - brew install mpfr
 - if [[ ${CMAKE_CXX_COMPILER} == g++ ]]; then
@@ -28,6 +30,7 @@ install:
       brew link llvm;
   fi
 - ${CMAKE_CXX_COMPILER} --version
+- /usr/local/bin/${CMAKE_CXX_COMPILER} --version
 - if [[ $LUA == 52 ]];  then brew tap homebrew/versions; brew install lua52; fi
 - if [[ $LUA == 51 ]];  then brew install lua; fi
 - if [[ $LUA == JIT ]]; then brew install luajit; fi
@@ -36,7 +39,7 @@ install:
 before_script:
 - mkdir build
 - cd build
-- cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DTCMALLOC=${TCMALLOC} -DMULTI_THREAD=${MULTI_THREAD} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ../src -G Ninja
+- cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DTCMALLOC=${TCMALLOC} -DMULTI_THREAD=${MULTI_THREAD} -DCMAKE_CXX_COMPILER=/usr/local/bin/${CMAKE_CXX_COMPILER} ../src -G Ninja
 - cd ..
 
 script:
